# mianshi-show

./: .gitignore  README.md
data/: eval_set.full.json  eval_set.hard.json  eval_set.sample.json  knowledge_base.sample.json
docs/: ARCHITECTURE.md
dotnet-ai-service/: .env.example  DotnetAiService.csproj  Program.cs  README.md  appsettings.json  nuget.config
dotnet-ai-service/Common/: ApiResponse.cs  AppOptions.cs  (+2 more)
java-ai-service/: .env.example  .gitignore  README.md  build.gradle  settings.gradle
python-rag-agent/: .env.example  Dockerfile  README.md  pyproject.toml
python-rag-agent/app/: __init__.py  config.py  main.py  schemas.py
python-rag-agent/app/agent/: __init__.py  graph.py  state.py  tools.py
python-rag-agent/app/api/: __init__.py  agent.py  interview.py  ops.py  rag.py
python-rag-agent/app/infra/: __init__.py  cache.py  guardrails.py  llm.py  observability.py  ratelimit.py
python-rag-agent/app/interview/: __init__.py  evaluator.py  question_gen.py
python-rag-agent/app/rag/: __init__.py  embedder.py  generator.py  loader.py  retriever.py  splitter.py  store.py
python-rag-agent/benchmarks/: README.md  build_eval_set.py  build_hard_eval.py  report.md  report_hard.md  run_ragas.py
python-rag-agent/demo/: app.py
python-rag-agent/demo/.streamlit/: secrets.toml.example
python-rag-agent/tests/: __init__.py  conftest.py  test_agent.py  test_cache.py  test_evaluator.py  test_guardrails.py  test_question_gen.py  test_rag_api.py  test_ratelimit.py  test_retriever.py  test_splitter.py  test_store.py
scripts/: local_openai_gateway.py
(+35 files in other folders)
